<resources>
    <string name="app_name">project burger</string>
    <string name="state">State</string>
    <string name="date">Date</string>
    <string name="order_number">Order number</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="choose_one_to_start_using_app">Choose one to start using app</string>
    <string name="delivery_man">Delivery Man</string>
    <string name="customer">Customer</string>
    <string name="welcome_admin">Welcome Admin!</string>
    <string name="welcome_user_n_select_a_choice">Welcome User! \n Select a Choice</string>
    <string name="drinks">Drinks</string>
    <string name="burgers">Burgers</string>
    <string name="finish_your_order">Finish Your Order!</string>
    <string name="meal">meal</string>
    <string name="cocacola">CocaCola</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="price">Price</string>
    <string name="_4_99">4.99</string>
    <string name="classic_burger">Classic Burger</string>
    <string name="total">Total:</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="edtaddress">EdtAddress</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="order_now">Order Now!</string>
    <string name="have_a_comment">Have a Comment?</string>
    <string name="drinks1">Drinks</string>
    <string name="basket">Basket</string>
</resources>