<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".UserActivity"
    tools:ignore="MissingClass">

  <Button
      android:id="@+id/button6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="300dp"
      android:text="@string/drinks"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/button7"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/burgers"
      android:layout_marginTop="100dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="MissingConstraints" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="26dp"
      android:layout_marginBottom="146dp"
      android:text="@string/welcome_user_n_select_a_choice"
      android:textSize="30sp"
      android:textStyle="bold"
      android:gravity="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>